--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,24 @@
-# Nodeモジュールの除外
+# Node.js 関連
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
 # Next.js のビルドファイル
 .next/
+out/
+*.log
 
-# OS関連の一時ファイル
+# OS/エディタの不要なファイル
 .DS_Store
 Thumbs.db
+.vscode/
+.idea/
+
+# 環境変数系（重要！）
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
