--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,16 @@
-touch versel.json
-
 {
     "version": 2,
-    "builds": [
-        {
-        "src": "next.config.js",
-        "use": "@vercel/next"
-        },
-
-    ],
+  "builds": [
+    {
+      "src": "next.config.js",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
  
 }
